[tool.poetry]
name = "atwiget"
version = "0.1.0"
description = ""
authors = ["Shchepelkov Viacheslav <eldigor@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
